	  There is a known funkiness here, where if you turn one away on,
	  and then use 'away' (or 'A') to toggle, you will turn on off and
	  the other on.  Just leaving it for now.  Should do better in the
	  next patch.
	The 'A' key is bound to 'away'
	Status bar can now read AWAY, Z-AWAY or A-AWAY.
	Changed C-n to scroll down just a line in popless
 	
2.1.1-pre-1
	Only print forced AIM logout message once.
	Don't bind F1 to help in edit context
	Fix bug in 'getsubs' with no tickets
	New code for getting users from .anyfile
	Added the 'pseudologins' variable, and code to do it
	new attributes 'pseudo' 'logintty' and 'loginhost'
	Don't print extra new lines in popless_file
	New zephyr_get_field function
	
2.0.14
	Fixed missing word in startup message
	Better 'status' command
	Use '+' for popwin corners when 'fancylines' is off
	Allow TERMINFO to be overridden in the envrionment
	Command line arg -D turns on debugging and deletes previous
	  debugging file
	Do ~ expansion in 'dump' command.
	Current directory added to 'status' command
	Massive changes to libfaim and aim
	
2.0.13
	Changed startup message for new mailing list
	blist now prints AIM info even if .anyone is unreadable
	Catch SIGPIPE and print an error rather than crashing.
	        [It's possible that this may have some portability 
		issues under Solaris and we may need to add some 
		configure stuff around SA_SIGINFO...]
	Handle the case in aim_bstream_send where aim_send returns -1,
	        although there is likely an underlying problem here
		that would lead to this case.
	Print the username on aim login failure, not something random like
	        the password.  ;)
	Un-word-wrap text when sending AIM messages.
	Replace the main loop continue in the keyboard handler with an else.
	
2.0.12
	Command history now doesn't allow the last entry
	   to be repeated
	If format_msg returns "" print "<unformatted message>"
	Better align oneline admin and loopback messages