@@ -275,7 +275,11 @@ int main(int argc, char **argv, char **env)
   perlerr=owl_perlconfig_readconfig(configfile);
   if (perlerr) {
     endwin();
-    fprintf(stderr, "\nError parsing configfile: %s\n", perlerr);
+    owl_function_error("Error parsing configfile\n");
+    fprintf(stderr, "\nError parsing configfile.  Possibly exists but not readable. (%s)\n", perlerr);
+    fflush(stderr);
+    printf("\nError parsing configfile.  Possibly exists but not readable. (%s)\n", perlerr);
+    fflush(stdout);
     exit(1);
   }
 
