@@ -19,6 +19,8 @@ $Id$
 	The 'A' key is bound to 'away'
 	Status bar can now read AWAY, Z-AWAY or A-AWAY.
 	Changed C-n to scroll down just a line in popless
+	If the config exists but is not readable, print an error before
+	  exiting
  	
 2.1.1-pre-1
 	Only print forced AIM logout message once.
